--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,16 @@
-html{
-    box-sizing: border-box;
-    font-size: 16px;
-    font-family: sans-serif;
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: sans-serif;
 }
 
-#inc, #dec {
-    margin-right: 20px;
-    padding: 10px;
+#inc,
+#dec {
+  margin-right: 20px;
+  padding: 10px;
+}
+
+.warning {
+  color: red;
+  font-weight: bold;
 }
